# mse_itmo

./: README.md
algorithms/: README.md  adventure.cpp  archivator.cpp  blocks.cpp  bridges_and_components.cpp  chip_installation.cpp  dots_connection.cpp  elevator.cpp  floyd.cpp  implicit_key.cpp  inside_out.cpp  island_countries.cpp  k-maximum.cpp  lovers_of_statistics.cpp  maze_of_knowledge.cpp  memory_management.cpp  minimal_vertex_cover.cpp  minimums_in_submatrices.cpp  nikifor.cpp  painting.cpp  perfect_matching.cpp  persistent_queue.cpp  perspective.cpp  quick_search_in_array.cpp  range_minimum_query.cpp  ropes.cpp  shortest_path_of_knight.cpp  snails.cpp  snowwhite.cpp  square_and_rectangles.cpp  string_basis.cpp  suffixes.cpp  sum_again.cpp  swamp.cpp  taxi.cpp  the_king.cpp  the_longest_path.cpp  tom_sawyer.cpp  transitive_closure.cpp  tree.cpp  (+4 more)
cpp/: README.md
cpp/bignum/: CMakeLists.txt  README.md  bignum.hpp  smoke_test.cpp
cpp/bignum/tests/: comp_include_once.cpp  comp_include_twice.cpp  comp_using_namespace_std.cpp  err.txt  ncomp_ctor_string_explicit.cpp  ncomp_err.txt  ncomp_operator_bool_implicit.cpp  ncomp_polynomial_ctor_string_explicit.cpp  run_bignum_assignment_operator_return_type.cpp  run_bignum_binary_operators_with_conversion.cpp  run_bignum_zero_multiplication.cpp  run_err.txt  run_horner.cpp  run_long_bignum_bool.cpp  run_long_bignums.cpp  run_polynomial.cpp  tests.sh
java/: README.md
python/: README.md  calm_down.py  classmethod.py  fibonacci.py  haskellolisp.py  heap.py  implicit.py  polynom.py  reversed_dict.py  transaction.py  wc.py
(+76 files in other folders)
